# Collage

./: CMakeLists.txt  Collage.cpp  Collage.h  CollageFrame.cpp  CollageFrame.h  CollageGraphics.cpp  CollageGraphics.h  CollageImage.cpp  CollageImage.h  CollageItemMetadata.h  CollageLayoutManager.cpp  CollageLayoutManager.h  CollageLayoutManagerFactory.cpp  CollageLayoutManagerFactory.h  CollageManual.doc  FillRoomLayoutManager.cpp  FillRoomLayoutManager.h  README.md  README.txt  RandomLayoutManager.cpp  RandomLayoutManager.h  SCRSceneManager.cpp  SCRSceneManager.h  SceneManager.cpp  SceneManager.h  SimpleDoubleLayoutManager.cpp  SimpleDoubleLayoutManager.h  SimpleSingleLayoutManager.cpp  SimpleSingleLayoutManager.h  SmartSingleLayoutManager.cpp  SmartSingleLayoutManager.h  TeleImmersionSceneManager.cpp  TeleImmersionSceneManager.h
Haggis/: CMakeLists.txt  LocalUsewxWidgets.cmake
Haggis/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  GLSLShader.cpp  GLSLShader.h  Graphics.cpp  Graphics.h  Interactor.cpp  Interactor.h
Haggis/Media/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  Image.cpp  Image.h  MediaTest.cpp  OBJObject.cpp  OBJObject.h  OBJObjectAO.cpp  OBJObjectAO.h  PerlinNoise.cpp  PerlinNoise.h  RenderObject.cpp  RenderObject.h  VideoCapture.cpp  VideoCapture.h  VideoFile.cpp  VideoFile.h  VideoStream.cpp  VideoStream.h
Haggis/Quat/: CMakeLists.txt  Quat.cpp  Quat.h  QuatTest.cpp  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Haggis/RenciWxWidgets/: CMakeLists.txt  RenciFrame.cpp  RenciFrame.h  RenciGLCanvas.cpp  RenciGLCanvas.h  RenciGraphics.cpp  RenciGraphics.h  RenciLog.cpp  RenciLog.h
Haggis/Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
